# mcp-sqlalchemy

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
llm-server/: README.md  docker-compose.yml
llm-server/bkp/: Dockerfile.bkp  main.py  requirements.txt
llm-server/models/: README.md
mssql/: init.sql
utils/: __init__.py  mcp_client.py  openai_agent.py  openai_tools.py  run.py.bkp
